--- a/cfg/RosAria.cfg
+++ b/cfg/RosAria.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-PACKAGE = "rosaria"
+PACKAGE = "Pioneer3_Control_ROS"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
